Source/JavaScriptCore/API/JSCallbackFunction.h
@@ -33,18 +33,13 @@ namespace JSC {
 
 class JSCallbackFunction : public InternalFunction {
 protected:
-    JSCallbackFunction(JSGlobalObject*, JSObjectCallAsFunctionCallback);
+    JSCallbackFunction(JSGlobalObject*, Structure*, JSObjectCallAsFunctionCallback);
     void finishCreation(JSGlobalData&, const String& name);
 
 public:
     typedef InternalFunction Base;
 
-    static JSCallbackFunction* create(ExecState* exec, JSGlobalObject* globalObject, JSObjectCallAsFunctionCallback callback, const String& name)
-    {
-        JSCallbackFunction* function = new (NotNull, allocateCell<JSCallbackFunction>(*exec->heap())) JSCallbackFunction(globalObject, callback);
-        function->finishCreation(exec->globalData(), name);
-        return function;
-    }
+    static JSCallbackFunction* create(ExecState*, JSGlobalObject*, JSObjectCallAsFunctionCallback, const String& name);
 
     static const ClassInfo s_info;
     
@@ -55,9 +50,10 @@ public:
         return Structure::create(globalData, globalObject, proto, TypeInfo(ObjectType, StructureFlags), &s_info); 
     }
 
-private:
+protected:
     static CallType getCallData(JSCell*, CallData&);
 
+private:
     static EncodedJSValue JSC_HOST_CALL call(ExecState*);
 
     JSObjectCallAsFunctionCallback m_callback;
